@startuml
'https://plantuml.com/class-diagram

class FireBaseFirestore
{
    +CollectionReference collection(String)

}

class Ingredient
{
    -String description
    -Date bestBeforeDate
    -String location
    -int count
    -String unit
    -String category

    -String formattedBestBeforeDate()
}
Serializable ()-- Ingredient : Implements

class CameraActivity{}

package Recipe #DDD
{
    class Recipe
    {
        -String title
        -int prep_time
        -int servings
        -String comments
        -String category
        -String picture
        -ArrayList<Ingredient> ingredientList;

        +void addIngredient(Ingredient)
        +void removeIngredient(Ingredient)
    }
    package RecipeFragment #DAA
    {
        class Recipe.ActivityResultLauncher
        {
            +void onActivityResult(ActivityResult)
        }

        interface Recipe.OnFragmentInteractionListener
        {
            +void onOkPressed(Ingredient newIngredient);
            +void onOkPressedEdit(Ingredient newIngredient);
        }
        class RecipeFragment
        {
            -ImageView recipeImage
            -EditText recipeTitle
            -EditText recipePrepareTime
            -EditText recipeServings
            -EditText recipeCategory
            -EditText recipeComments
            -Uri imageURI
            -OnFragmentInteractionListener listener;
            -FireBaseFirestore db
            -ActivityResultLauncher<Intent> cameraActivity
            -ActivityResultLauncher<Intent> ingredientActivity

            + {static} void onAttach(@NonNull Context)
            + {static} RecipeFragment NewInstance(Recipe)
            + Dialog onCreateDialog(@Nullable Bundle)
            - boolean emptyStringCheck(String, String, String, String, String)

            + {static} void delRecipeDB(Recipe, CollectionReference)
            + {static} void addRecipeDB(Recipe, CollectionReference)
            + {static} void editRecipeDB(Recipe, Recipe, CollectionReference)

            - int parsePrepTime(String prepTime)
            - int parseServing(String serving)
            - String bitmapToString(Bitmap picture)
        }
        class RecipeIngredientsActivity implements Recipe.OnFragmentInteractionListener
        {
            -ListView ingredientList;
            -ArrayAdapter<Ingredient> ingredientAdapter;
            -ArrayList<Ingredient> dataList;
            -int selected;

            *void onResume()
            *void onCreate(Bundle savedInstanceState)
            +void onOkPressed(Ingredient newIngredient)
            +void onOkPressedEdit(Ingredient ingredient)
            +void Done()
        }
    }
    package RecipeActivity #DAA
    {
        class RecipeActivity implements Recipe.OnFragmentInteractionListener
        {
            -ListView recipeListView
            -ArrayAdapter<Recipe> recipeAdapter
            -ArrayList<Recipe> recipeList
            -int selected
            -String[] sortValues = { "title", "prep time", "# of servings", "category" }

            *void onCreate(Bundle)
            +void onOkPressedRecipe(Recipe)
            +void onOkPressedEditRecipe(Recipe)
        }
        class CustomRecipeArrayAdapter
        {
            - ArrayList<Recipe> recipes
            - Context context
            - FireBaseFirestore db

            + View getView(int, @Nullable View, @NonNull ViewGroup)
        }
    }
    Serializable ()-- Recipe : Implements

    Ingredient "0..*" -o "0..*" Recipe

    RecipeActivity o- "0..*" Recipe
    CustomRecipeArrayAdapter "1" --o RecipeActivity
    Recipe.OnFragmentInteractionListener <-* RecipeFragment

    FireBaseFirestore --o RecipeActivity
    FireBaseFirestore --o RecipeFragment
    FireBaseFirestore --o CustomRecipeArrayAdapter

    RecipeActivity <--> RecipeFragment
    RecipeFragment "2" o--> Recipe.ActivityResultLauncher
    Recipe.ActivityResultLauncher <-> CameraActivity
    Recipe.ActivityResultLauncher <-> RecipeIngredientsActivity
}


@enduml